// Autogenerated with StateSmith 0.19.0-alpha-1+5931a3a68e50c80e83349118a90569bf08270686.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

#nullable enable

// Generated state machine
public partial class BeziqueGame
{
    public enum EventId
    {
        DO = 0, // The `do` event is special. State event handlers do not consume this event (ancestors all get it too) unless a transition occurs.
    }

    public const int EventIdCount = 1;

    public enum StateId
    {
        ROOT = 0,
        CARD_PLACED = 1,
        ENOUGH_CARD_GAME = 2,
        DRAW_CARD = 3,
        MELT_CHECKED = 4,
        NEXT_TRICK = 5,
        PLAYER = 6,
        TICK_OVER = 7,
        TURN_ENDED = 8,
        WINNER = 9,
        GAME_STARTED = 10,
        LAST_9_CARD_GAME = 11,
        L9CG_PLAYER = 12,
        TRUMP_SELECTED = 13,
    }

    public const int StateIdCount = 14;

    // Used internally by state machine. Feel free to inspect, but don't modify.
    public StateId stateId;

    // State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
    public BeziqueGame()
    {
    }

    // Starts the state machine. Must be called before dispatching events. Not thread safe.
    public void Start()
    {
        ROOT_enter();
        // ROOT behavior
        // uml: TransitionTo(ROOT.<InitialState>)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
            // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.

            // ROOT.<InitialState> behavior
            // uml: TransitionTo(GAME_STARTED)
            {
                // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                // Step 2: Transition action: ``.

                // Step 3: Enter/move towards transition target `GAME_STARTED`.
                GAME_STARTED_enter();

                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return;
            } // end of behavior for ROOT.<InitialState>
        } // end of behavior for ROOT
    }

    // Dispatches an event to the state machine. Not thread safe.
    // Note! This function assumes that the `eventId` parameter is valid.
    public void DispatchEvent(EventId eventId)
    {

        switch (this.stateId)
        {
            // STATE: BeziqueGame
            case StateId.ROOT:
                // state and ancestors have no handler for `do` event.
                break;

            // STATE: CARD_PLACED
            case StateId.CARD_PLACED:
                CARD_PLACED_do();
                break;

            // STATE: ENOUGH_CARD_GAME
            case StateId.ENOUGH_CARD_GAME:
                ENOUGH_CARD_GAME_do();
                break;

            // STATE: DRAW_CARD
            case StateId.DRAW_CARD:
                ENOUGH_CARD_GAME_do();  // First ancestor handler for this event

                break;

            // STATE: MELT_CHECKED
            case StateId.MELT_CHECKED:
                MELT_CHECKED_do();
                break;

            // STATE: NEXT_TRICK
            case StateId.NEXT_TRICK:
                ENOUGH_CARD_GAME_do();  // First ancestor handler for this event

                break;

            // STATE: PLAYER
            case StateId.PLAYER:
                PLAYER_do();
                break;

            // STATE: TICK_OVER
            case StateId.TICK_OVER:
                TICK_OVER_do();
                break;

            // STATE: TURN_ENDED
            case StateId.TURN_ENDED:
                TURN_ENDED_do();
                break;

            // STATE: WINNER
            case StateId.WINNER:
                WINNER_do();
                break;

            // STATE: GAME_STARTED
            case StateId.GAME_STARTED:
                GAME_STARTED_do();
                break;

            // STATE: LAST_9_CARD_GAME
            case StateId.LAST_9_CARD_GAME:
                // state and ancestors have no handler for `do` event.
                break;

            // STATE: L9CG_PLAYER
            case StateId.L9CG_PLAYER:
                // state and ancestors have no handler for `do` event.
                break;

            // STATE: TRUMP_SELECTED
            case StateId.TRUMP_SELECTED:
                TRUMP_SELECTED_do();
                break;
        }

    }

    // This function is used when StateSmith doesn't know what the active leaf state is at
    // compile time due to sub states or when multiple states need to be exited.
    private void ExitUpToStateHandler(StateId desiredState)
    {
        while (this.stateId != desiredState)
        {
            switch (this.stateId)
            {
                case StateId.CARD_PLACED: CARD_PLACED_exit(); break;

                case StateId.ENOUGH_CARD_GAME: ENOUGH_CARD_GAME_exit(); break;

                case StateId.DRAW_CARD: DRAW_CARD_exit(); break;

                case StateId.MELT_CHECKED: MELT_CHECKED_exit(); break;

                case StateId.NEXT_TRICK: NEXT_TRICK_exit(); break;

                case StateId.PLAYER: PLAYER_exit(); break;

                case StateId.TICK_OVER: TICK_OVER_exit(); break;

                case StateId.TURN_ENDED: TURN_ENDED_exit(); break;

                case StateId.WINNER: WINNER_exit(); break;

                case StateId.GAME_STARTED: GAME_STARTED_exit(); break;

                case StateId.LAST_9_CARD_GAME: LAST_9_CARD_GAME_exit(); break;

                case StateId.L9CG_PLAYER: L9CG_PLAYER_exit(); break;

                case StateId.TRUMP_SELECTED: TRUMP_SELECTED_exit(); break;

                default: return;  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
            }
        }
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ROOT
    ////////////////////////////////////////////////////////////////////////////////

    private void ROOT_enter()
    {
        this.stateId = StateId.ROOT;
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state CARD_PLACED
    ////////////////////////////////////////////////////////////////////////////////

    private void CARD_PLACED_enter()
    {
        this.stateId = StateId.CARD_PLACED;
    }

    private void CARD_PLACED_exit()
    {
        this.stateId = StateId.ROOT;
    }

    private void CARD_PLACED_do()
    {
        // CARD_PLACED behavior
        // uml: do TransitionTo(TRUMP_SELECTED)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            CARD_PLACED_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `TRUMP_SELECTED`.
            TRUMP_SELECTED_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for CARD_PLACED

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ENOUGH_CARD_GAME
    ////////////////////////////////////////////////////////////////////////////////

    private void ENOUGH_CARD_GAME_enter()
    {
        this.stateId = StateId.ENOUGH_CARD_GAME;
    }

    private void ENOUGH_CARD_GAME_exit()
    {
        this.stateId = StateId.ROOT;
    }

    private void ENOUGH_CARD_GAME_do()
    {
        // ENOUGH_CARD_GAME behavior
        // uml: do TransitionTo(LAST_9_CARD_GAME)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            ExitUpToStateHandler(StateId.ROOT);

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `LAST_9_CARD_GAME`.
            LAST_9_CARD_GAME_enter();

            // LAST_9_CARD_GAME.<InitialState> behavior
            // uml: TransitionTo(L9CG_PLAYER)
            {
                // Step 1: Exit states until we reach `LAST_9_CARD_GAME` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                // Step 2: Transition action: ``.

                // Step 3: Enter/move towards transition target `L9CG_PLAYER`.
                L9CG_PLAYER_enter();

                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return;
            } // end of behavior for LAST_9_CARD_GAME.<InitialState>
        } // end of behavior for ENOUGH_CARD_GAME

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state DRAW_CARD
    ////////////////////////////////////////////////////////////////////////////////

    private void DRAW_CARD_enter()
    {
        this.stateId = StateId.DRAW_CARD;
    }

    private void DRAW_CARD_exit()
    {
        this.stateId = StateId.ENOUGH_CARD_GAME;
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state MELT_CHECKED
    ////////////////////////////////////////////////////////////////////////////////

    private void MELT_CHECKED_enter()
    {
        this.stateId = StateId.MELT_CHECKED;
    }

    private void MELT_CHECKED_exit()
    {
        this.stateId = StateId.ENOUGH_CARD_GAME;
    }

    private void MELT_CHECKED_do()
    {
        bool consume_event = false;

        // MELT_CHECKED behavior
        // uml: do TransitionTo(TICK_OVER)
        {
            // Step 1: Exit states until we reach `ENOUGH_CARD_GAME` state (Least Common Ancestor for transition).
            MELT_CHECKED_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `TICK_OVER`.
            TICK_OVER_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for MELT_CHECKED

        // Check if event has been consumed before calling ancestor handler.
        if (!consume_event)
        {
            ENOUGH_CARD_GAME_do();
        }
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state NEXT_TRICK
    ////////////////////////////////////////////////////////////////////////////////

    private void NEXT_TRICK_enter()
    {
        this.stateId = StateId.NEXT_TRICK;
    }

    private void NEXT_TRICK_exit()
    {
        this.stateId = StateId.ENOUGH_CARD_GAME;
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state PLAYER
    ////////////////////////////////////////////////////////////////////////////////

    private void PLAYER_enter()
    {
        this.stateId = StateId.PLAYER;
    }

    private void PLAYER_exit()
    {
        this.stateId = StateId.ENOUGH_CARD_GAME;
    }

    private void PLAYER_do()
    {
        bool consume_event = false;

        // PLAYER behavior
        // uml: do TransitionTo(TURN_ENDED)
        {
            // Step 1: Exit states until we reach `ENOUGH_CARD_GAME` state (Least Common Ancestor for transition).
            PLAYER_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `TURN_ENDED`.
            TURN_ENDED_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for PLAYER

        // Check if event has been consumed before calling ancestor handler.
        if (!consume_event)
        {
            ENOUGH_CARD_GAME_do();
        }
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state TICK_OVER
    ////////////////////////////////////////////////////////////////////////////////

    private void TICK_OVER_enter()
    {
        this.stateId = StateId.TICK_OVER;
    }

    private void TICK_OVER_exit()
    {
        this.stateId = StateId.ENOUGH_CARD_GAME;
    }

    private void TICK_OVER_do()
    {
        bool consume_event = false;

        // TICK_OVER behavior
        // uml: do TransitionTo(NEXT_TRICK)
        {
            // Step 1: Exit states until we reach `ENOUGH_CARD_GAME` state (Least Common Ancestor for transition).
            TICK_OVER_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `NEXT_TRICK`.
            NEXT_TRICK_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for TICK_OVER

        // Check if event has been consumed before calling ancestor handler.
        if (!consume_event)
        {
            ENOUGH_CARD_GAME_do();
        }
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state TURN_ENDED
    ////////////////////////////////////////////////////////////////////////////////

    private void TURN_ENDED_enter()
    {
        this.stateId = StateId.TURN_ENDED;
    }

    private void TURN_ENDED_exit()
    {
        this.stateId = StateId.ENOUGH_CARD_GAME;
    }

    private void TURN_ENDED_do()
    {
        bool consume_event = false;

        // TURN_ENDED behavior
        // uml: do TransitionTo(WINNER)
        {
            // Step 1: Exit states until we reach `ENOUGH_CARD_GAME` state (Least Common Ancestor for transition).
            TURN_ENDED_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `WINNER`.
            WINNER_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for TURN_ENDED

        // Check if event has been consumed before calling ancestor handler.
        if (!consume_event)
        {
            ENOUGH_CARD_GAME_do();
        }
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state WINNER
    ////////////////////////////////////////////////////////////////////////////////

    private void WINNER_enter()
    {
        this.stateId = StateId.WINNER;
    }

    private void WINNER_exit()
    {
        this.stateId = StateId.ENOUGH_CARD_GAME;
    }

    private void WINNER_do()
    {
        bool consume_event = false;

        // WINNER behavior
        // uml: do TransitionTo(MELT_CHECKED)
        {
            // Step 1: Exit states until we reach `ENOUGH_CARD_GAME` state (Least Common Ancestor for transition).
            WINNER_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `MELT_CHECKED`.
            MELT_CHECKED_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for WINNER

        // Check if event has been consumed before calling ancestor handler.
        if (!consume_event)
        {
            ENOUGH_CARD_GAME_do();
        }
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state GAME_STARTED
    ////////////////////////////////////////////////////////////////////////////////

    private void GAME_STARTED_enter()
    {
        this.stateId = StateId.GAME_STARTED;

        // GAME_STARTED behavior
        // uml: enter / { NotifyAll(); }
        {
            // Step 1: execute action `NotifyAll();`
            NotifyAll();
        } // end of behavior for GAME_STARTED
    }

    private void GAME_STARTED_exit()
    {
        this.stateId = StateId.ROOT;
    }

    private void GAME_STARTED_do()
    {
        // GAME_STARTED behavior
        // uml: do TransitionTo(CARD_PLACED)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            GAME_STARTED_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `CARD_PLACED`.
            CARD_PLACED_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for GAME_STARTED

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state LAST_9_CARD_GAME
    ////////////////////////////////////////////////////////////////////////////////

    private void LAST_9_CARD_GAME_enter()
    {
        this.stateId = StateId.LAST_9_CARD_GAME;
    }

    private void LAST_9_CARD_GAME_exit()
    {
        this.stateId = StateId.ROOT;
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state L9CG_PLAYER
    ////////////////////////////////////////////////////////////////////////////////

    private void L9CG_PLAYER_enter()
    {
        this.stateId = StateId.L9CG_PLAYER;
    }

    private void L9CG_PLAYER_exit()
    {
        this.stateId = StateId.LAST_9_CARD_GAME;
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state TRUMP_SELECTED
    ////////////////////////////////////////////////////////////////////////////////

    private void TRUMP_SELECTED_enter()
    {
        this.stateId = StateId.TRUMP_SELECTED;
    }

    private void TRUMP_SELECTED_exit()
    {
        this.stateId = StateId.ROOT;
    }

    private void TRUMP_SELECTED_do()
    {
        // TRUMP_SELECTED behavior
        // uml: do TransitionTo(ENOUGH_CARD_GAME)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            TRUMP_SELECTED_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `ENOUGH_CARD_GAME`.
            ENOUGH_CARD_GAME_enter();

            // ENOUGH_CARD_GAME.<InitialState> behavior
            // uml: TransitionTo(PLAYER)
            {
                // Step 1: Exit states until we reach `ENOUGH_CARD_GAME` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                // Step 2: Transition action: ``.

                // Step 3: Enter/move towards transition target `PLAYER`.
                PLAYER_enter();

                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return;
            } // end of behavior for ENOUGH_CARD_GAME.<InitialState>
        } // end of behavior for TRUMP_SELECTED

        // No ancestor handles this event.
    }

    // Thread safe.
    public static string StateIdToString(StateId id)
    {
        switch (id)
        {
            case StateId.ROOT: return "ROOT";
            case StateId.CARD_PLACED: return "CARD_PLACED";
            case StateId.ENOUGH_CARD_GAME: return "ENOUGH_CARD_GAME";
            case StateId.DRAW_CARD: return "DRAW_CARD";
            case StateId.MELT_CHECKED: return "MELT_CHECKED";
            case StateId.NEXT_TRICK: return "NEXT_TRICK";
            case StateId.PLAYER: return "PLAYER";
            case StateId.TICK_OVER: return "TICK_OVER";
            case StateId.TURN_ENDED: return "TURN_ENDED";
            case StateId.WINNER: return "WINNER";
            case StateId.GAME_STARTED: return "GAME_STARTED";
            case StateId.LAST_9_CARD_GAME: return "LAST_9_CARD_GAME";
            case StateId.L9CG_PLAYER: return "L9CG_PLAYER";
            case StateId.TRUMP_SELECTED: return "TRUMP_SELECTED";
            default: return "?";
        }
    }

    // Thread safe.
    public static string EventIdToString(EventId id)
    {
        switch (id)
        {
            case EventId.DO: return "DO";
            default: return "?";
        }
    }
}
