@startuml

/'! $CONFIG : toml
SmRunnerSettings.transpilerId = "CSharp"
'/

hide empty description

state GAME_STARTED {
    GAME_STARTED: enter / addapter.NotifyAll();
}
state CARD_PLACED
state TRUMP_SELECTED

state ENOUGH_CARD_GAME{
    state PLAYER
    state TURN_ENDED
    state WINNER
    state MELT_CHECKED
    state TICK_OVER
    state NEXT_TRICK
    state DRAW_CARD
    
    [*] -> PLAYER
    PLAYER -> TURN_ENDED
    TURN_ENDED -> WINNER
    WINNER -> MELT_CHECKED
    MELT_CHECKED -> TICK_OVER
    TICK_OVER -> NEXT_TRICK
    
}

state LAST_9_CARD_GAME{
    state L9CG_PLAYER 
    [*] -> L9CG_PLAYER
}

[*] -> GAME_STARTED
GAME_STARTED -> CARD_PLACED
CARD_PLACED -> TRUMP_SELECTED
TRUMP_SELECTED -> ENOUGH_CARD_GAME
ENOUGH_CARD_GAME -> LAST_9_CARD_GAME






@enduml

